fixed spacing on sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,7 +805,7 @@ footer {
     }
 
     .sidebar {
-        top: 9px;
+        top: 35px;
         width: 600px;
         margin-left: 10px;
     }
